@@ -1,8 +1,44 @@
-/* -*- Mode: C; tab-width: 4; -*- */
-/*
- *  npapi.h $Revision$
- *  Netscape client plug-in API spec
- */
+/* ***** BEGIN LICENSE BLOCK *****
+ * Version: MPL 1.1/GPL 2.0/LGPL 2.1
+ *
+ * The contents of this file are subject to the Mozilla Public License Version
+ * 1.1 (the "License"); you may not use this file except in compliance with
+ * the License. You may obtain a copy of the License at
+ * http://www.mozilla.org/MPL/
+ *
+ * Software distributed under the License is distributed on an "AS IS" basis,
+ * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+ * for the specific language governing rights and limitations under the
+ * License.
+ *
+ * The Original Code is mozilla.org code.
+ *
+ * The Initial Developer of the Original Code is
+ * Netscape Communications Corporation.
+ * Portions created by the Initial Developer are Copyright (C) 1998
+ * the Initial Developer. All Rights Reserved.
+ *
+ * Contributor(s):
+ *
+ * Alternatively, the contents of this file may be used under the terms of
+ * either the GNU General Public License Version 2 or later (the "GPL"), or
+ * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+ * in which case the provisions of the GPL or the LGPL are applicable instead
+ * of those above. If you wish to allow use of your version of this file only
+ * under the terms of either the GPL or the LGPL, and not to allow others to
+ * use your version of this file under the terms of the MPL, indicate your
+ * decision by deleting the provisions above and replace them with the notice
+ * and other provisions required by the GPL or the LGPL. If you do not delete
+ * the provisions above, a recipient may use your version of this file under
+ * the terms of any one of the MPL, the GPL or the LGPL.
+ *
+ * ***** END LICENSE BLOCK ***** */
+ 
+ 
+ /*
+  *  Netscape client plug-in API spec
+  */
+ 
 
 #ifndef _NPAPI_H_
 #define _NPAPI_H_
@@ -60,7 +96,7 @@
 /*----------------------------------------------------------------------*/
 
 #define NP_VERSION_MAJOR 0
-#define NP_VERSION_MINOR 12
+#define NP_VERSION_MINOR 14
 
 
 
@@ -99,10 +135,7 @@ typedef long int32;
 #define NULL (0L)
 #endif
 
-//#ifndef _NP_RUNTIME_H_
-// Ack!  Temporary hack to get build working.
-typedef unsigned char NPBool;
-//#endif
+typedef unsigned char    NPBool;
 typedef int16            NPError;
 typedef int16            NPReason;
 typedef char*            NPMIMEType;
@@ -264,7 +297,7 @@ typedef enum {
     NPPVpluginNeedsXEmbed         = 14, /* Not implemented in WebKit */
 
     /* Get the NPObject for scripting the plugin. */
-    NPPVpluginScriptableNPObject
+    NPPVpluginScriptableNPObject  = 15
 } NPPVariable;
 
 /*
@@ -286,7 +319,7 @@ typedef enum {
     NPNVSupportsXEmbedBool = 14,              /* Not implemented in WebKit */
 
     /* Get the NPObject wrapper for the browser window. */
-    NPNVWindowNPObject,
+    NPNVWindowNPObject = 15,
 
     /* Get the NPObject wrapper for the plugins DOM element. */
     NPNVPluginElementNPObject                 /* Not implemented in WebKit */
